fixed elements that were overflowing in post one

--- a/css/main.css
+++ b/css/main.css
@@ -572,7 +572,7 @@ html {
   vertical-align: middle;
 }
 .authorPostOne .authorNamePostOne {
-  display: inline-block;
+  display: block;
   margin-bottom: 0;
   position: relative;
   font-weight: 30px;
@@ -632,26 +632,30 @@ html {
 }
 .engagementsPostOne .emojisAndComments .reactionCounter {
   margin-left: 1em;
-  display: inline;
+  display: inline-flex;
+  font-size: 0.9em;
 }
 .engagementsPostOne .emojisAndComments .commentsPostOne {
-  padding-left: 50px;
+  padding-left: 25px;
+  font-size: 0.9em;
 }
 .engagementsPostOne .emojisAndComments .commentsPostOne .crayons-icon {
-  margin-right: 10px;
+  margin-right: 5px;
 }
 .engagementsPostOne .emojisAndComments .commentsPostOne .commentsPostOneBottom {
   display: inline;
+  font-size: 0.9em;
 }
 .engagementsPostOne .savePostOneBottom {
   display: flex;
   align-items: center;
 }
 .engagementsPostOne .savePostOneBottom p {
-  margin-right: 20px;
+  margin-right: 15px;
+  font-size: 0.9em;
 }
 .engagementsPostOne .savePostOneBottom button {
-  padding: 5px;
+  padding: 2px;
   background-color: white;
   border: none;
 }
