--- a/sass/_maincontainer.scss
+++ b/sass/_maincontainer.scss
@@ -84,7 +84,7 @@
     }
 
     .authorNamePostOne {
-        display: inline-block;
+        display: block;
         margin-bottom: 0;
         position: relative;
         font-weight: 30px;
@@ -153,18 +153,22 @@
 
         .reactionCounter {
             margin-left: 1em;
-            display: inline;
+            display: inline-flex;
+            font-size: .9em;
         }
 
         .commentsPostOne {
-            padding-left: 50px;
+            padding-left: 25px;
+            font-size: .9em;
 
             .crayons-icon {
-                margin-right: 10px;
+                margin-right: 5px;
+                
             }
 
             .commentsPostOneBottom {
                 display: inline;
+                font-size: .9em;
             }
         }
     }
@@ -174,11 +178,12 @@
         align-items: center;
 
         p {
-            margin-right: 20px;
+            margin-right: 15px;
+            font-size: .9em;
         }
 
         button {
-            padding: 5px;
+            padding: 2px;
             background-color: white;
             border: none;
         }
